--- a/troll/cmufakeprof.html
+++ b/troll/cmufakeprof.html
@@ -229,11 +229,11 @@
     <div class="views-row-inner entity-row-inner">
         
           <div class="text-center teacher-portrait views-fieldset" data-module="views_fieldsets">
-            <div class="entity-list-img"><img src="./師資陣容 _ 中國醫藥大學生命科學院(China Medical University College of Life Sciences)_files/hungsc.jpg" width="300" height="300" alt=""></div>                <div class="more-link theme-main-tone btn-link"><a href="http://webap.cmu.edu.tw/TchEportfolio/index_2/hungsc" target="_blank" data-extlink="" rel="noopener noreferrer">教師詳情 →<span class="ext"><span class="element-invisible">(link is external)</span></span></a></div>      </div>
+            <div class="entity-list-img"><img src="https://i.imgur.com/0LICv5Y.jpg" width="300" height="300" alt=""></div>                <div class="more-link theme-main-tone btn-link"><a href="http://webap.cmu.edu.tw/TchEportfolio/index_2/hungsc" target="_blank" data-extlink="" rel="noopener noreferrer">教師詳情 →<span class="ext"><span class="element-invisible">(link is external)</span></span></a></div>      </div>
 
     
           <div class="entity-list-info views-fieldset" data-module="views_fieldsets">
-            <h3 class="entity-list-title">教授 | 洪士杰</h3>                <div class="entity-list-subtitle theme-main-tone">未分類</div>                <div class="teacher-job-title">生命科學院院長<br>醫學院轉譯醫學暨新藥開發研究所 教授<br>新藥開發研究中心中心主任(1090801~1120731)</div>                <div class="entity-list-body"><ul>
+            <h3 class="entity-list-title">教授 | 張恒睿</h3>                <div class="entity-list-subtitle theme-main-tone">未分類</div>                <div class="teacher-job-title">生命科學院院長<br>醫學院轉譯醫學暨新藥開發研究所 教授<br>新藥開發研究中心中心主任(1090801~1120731)</div>                <div class="entity-list-body"><ul>
 	<li><strong><span style="background-color:#f1c40f;">學歷/Education：</span></strong>
 	<ul>
 		<li>日本東京大學 醫學 博士<br>
